--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
 matplotlib==3.1.0
 numpy==1.16.5
 scikit-learn==0.21.3
-mock==1.0.1
-nose==1.3.4
-pyparsing==2.0.3
-python-dateutil==2.4.0
-pytz==2014.10
-scipy==0.15.1
-six==1.9.0
-wsgiref==0.1.2
+pandas==0.25.3
+scipy==1.3.0
+pyparsing==2.4.2
+python-dateutil==2.8.0
+pytz==2019.2
