--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ scipy==1.3.0
 pyparsing==2.4.2
 python-dateutil==2.8.0
 pytz==2019.2
+entrypoints==0.4
+jsonschema==4.4.0
+toolz=0.7.0
+vega_datasets
