--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-matplotlib==3.1.0
-numpy==1.16.5
-scikit-learn==0.21.3
-pandas==0.25.3
-scipy==1.3.0
-pyparsing==2.4.2
-python-dateutil==2.8.0
-pytz==2019.2
+matplotlib==3.8.0
+matplotlib-base==3.8.0
+matplotlib-inline==0.1.6
+numpy==1.23.5
+scikit-learn=1.2.2=
+pandas==1.4.4
+scipy==1.11.4
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3.post1
 entrypoints==0.4
-jsonschema==4.4.0
-toolz==0.7.0
+jsonschema==4.19.2
+toolz==0.12.0
 altair
 vega_datasets
